update test script and added experimental results